--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -400,7 +400,7 @@
         }
 
         &:focus {
-          border: 1px solid rgba(71, 164, 71, 0.5);
+          border: 1px solid rgba(51,102,255,0.5);
           background-color: $input-bg;
           color: #ffffff;
         }
