--- a/assets/scss/components/_forms.scss
+++ b/assets/scss/components/_forms.scss
@@ -29,7 +29,7 @@
   color: #ffffff;
 
   &:focus {
-    border: 1px solid rgba(71, 164, 71, 0.5);
+    border: 1px solid rgba(51,102,255,0.5);
     background-color: $input-bg;
     color: #ffffff;
   }
