--- a/views/new-idea/upload_test.html
+++ b/views/new-idea/upload_test.html
@@ -21,7 +21,7 @@
     <script>
         function handleFileUpload(file) {
             var xhr = new XMLHttpRequest();
-            xhr.open("POST", "/views/new-idea/upload/" + file.name, true);
+            xhr.open("POST", "/new-idea/upload/" + file.name, true);
 
             xhr.upload.onprogress = function (e) {
                 var percentCompleted = Math.round((e.loaded / e.total) * 100);
