--- a/views/new-idea/upload_test.html
+++ b/views/new-idea/upload_test.html
@@ -94,6 +94,7 @@
         }
 
         document.addEventListener("DOMContentLoaded", function () {
+            dropbox = document.getElementById("dropbox");
             dropbox.addEventListener("dragover", handleDragOver);
             dropbox.addEventListener("dragleave", handleDragLeave);
             dropbox.addEventListener("drop", handleDrop);
