--- a/views/new-idea/upload_test.html
+++ b/views/new-idea/upload_test.html
@@ -44,6 +44,8 @@
                 if (xhr.status === 200) {
                     var response = JSON.parse(xhr.responseText);
                     if (response.message === "success") {
+                        // turn the progress bar green
+                        progressBar.classList.add("success");
                         var thumbnailURL = response.thumbnailURL;
                         // Display the thumbnailURL in the UI
                     } else {
