--- a/views/new-idea/upload_test.html
+++ b/views/new-idea/upload_test.html
@@ -45,7 +45,7 @@
                     var response = JSON.parse(xhr.responseText);
                     if (response.message === "success") {
                         // turn the progress bar green
-                        progressBar.style.backgroundColor = "#00ff00";
+                        progressBar.style.color = "green";
                         var thumbnailURL = response.thumbnailURL;
                         // Display the thumbnailURL in the UI
                     } else {
