--- a/views/new-idea/upload_test.html
+++ b/views/new-idea/upload_test.html
@@ -17,6 +17,10 @@
         #dropbox.highlight {
             background-color: #e8f9ff;
         }
+
+        progress.success::-webkit-progress-bar {
+            background-color: green;
+        }
     </style>
     <script>
         var dropbox;
@@ -44,8 +48,10 @@
                 if (xhr.status === 200) {
                     var response = JSON.parse(xhr.responseText);
                     if (response.message === "success") {
-                        // turn the progress bar green
-                        progressBar.style.color = "green";
+                        progressBar.classList.add("success");
+                        // update the progress bar to 100%
+                        progressBar.value = 100;
+
                         var thumbnailURL = response.thumbnailURL;
                         // Display the thumbnailURL in the UI
                     } else {
