--- a/views/new-idea/upload_test.html
+++ b/views/new-idea/upload_test.html
@@ -18,7 +18,7 @@
             background-color: #e8f9ff;
         }
 
-        progress.success::-webkit-progress-bar {
+        .success::-webkit-progress-bar {
             background-color: green;
         }
     </style>
