--- a/views/new-idea/upload_test.html
+++ b/views/new-idea/upload_test.html
@@ -17,6 +17,10 @@
         #dropbox.highlight {
             background-color: #e8f9ff;
         }
+
+        .success {
+            background-color: #b6ffb6;
+        }
     </style>
 
 </head>
