--- a/views/new-idea/upload_test.html
+++ b/views/new-idea/upload_test.html
@@ -20,6 +20,8 @@
 
         .success {
             background-color: #b6ffb6;
+            height: 16px;
+            border-radius: 6px;
         }
     </style>
 
