--- a/views/new-idea/upload_test.html
+++ b/views/new-idea/upload_test.html
@@ -18,10 +18,8 @@
             background-color: #e8f9ff;
         }
 
-        .success {
-            background-color: #b6ffb6;
-            height: 16px;
-            border-radius: 6px;
+        .success::-webkit-progress-value {
+            background-color: green;
         }
     </style>
 
