--- a/views/new-idea/upload_test.html
+++ b/views/new-idea/upload_test.html
@@ -18,8 +18,8 @@
             background-color: #e8f9ff;
         }
 
-        .success::-webkit-progress-value {
-            background-color: green;
+        .success::-webkit-progress-bar {
+            background-color: green
         }
     </style>
 
