--- a/views/new-idea/upload_test.html
+++ b/views/new-idea/upload_test.html
@@ -18,6 +18,11 @@
             background-color: #e8f9ff;
         }
 
+        .success {
+            background-color: green;
+            height: 12px;
+        }
+
         .success::-webkit-progress-bar {
             background-color: green
         }
