--- a/views/new-idea/upload_test.html
+++ b/views/new-idea/upload_test.html
@@ -19,12 +19,9 @@
         }
 
         .success {
-            background-color: green;
-            height: 12px;
-        }
-
-        .success::-webkit-progress-bar {
-            background-color: green
+            border: 2px solid green !important;
+            border-radius: 6px;
+            height: 10px;
         }
     </style>
 
