--- a/views/new-idea/upload_test.html
+++ b/views/new-idea/upload_test.html
@@ -22,6 +22,8 @@
             border: 2px solid green !important;
             border-radius: 6px;
             height: 8px;
+            position: relative;
+            top: -2px;
         }
     </style>
 
