--- a/views/new-idea/upload_test.html
+++ b/views/new-idea/upload_test.html
@@ -21,11 +21,6 @@
             overflow-x: auto;
         }
 
-        #dropbox p {
-            font-size: 1.2em;
-            margin: 50px auto;
-        }
-
         .card {
             width: 100px;
             height: 100px;
@@ -45,6 +40,7 @@
             justify-content: start;
             align-items: center;
             flex-wrap: nowrap;
+            padding: 5px;
         }
 
         .card-body {
@@ -55,6 +51,7 @@
             justify-content: start;
             align-items: center;
             flex-wrap: nowrap;
+            padding: 5px;
         }
 
         .card-footer {
@@ -65,11 +62,12 @@
             justify-content: start;
             align-items: center;
             flex-wrap: nowrap;
+            padding: 5px;
         }
 
         .thumbnail {
-            width: 100%;
-            height: 100%;
+            width: 90px;
+            height: 90px;
         }
 
         #dropbox.highlight {
@@ -81,8 +79,6 @@
             border: 2px solid green !important;
             border-radius: 6px;
             height: 8px;
-            position: relative;
-            top: -4px;
         }
     </style>
 
@@ -91,9 +87,7 @@
 <body>
     <h1>File Upload Test</h1>
 
-    <div id="dropbox">
-        <p>Drag and drop files here</p>
-    </div>
+    <div id="dropbox"></div>
 
     <script>
         var dropbox;
