--- a/views/new-idea/upload_test.html
+++ b/views/new-idea/upload_test.html
@@ -33,41 +33,41 @@
         }
 
         .card-header {
-            width: 100%;
+            width: calc(100% - 10px);
             height: 20px;
             display: flex;
             flex-direction: row;
-            justify-content: start;
+            justify-content: center;
             align-items: center;
             flex-wrap: nowrap;
             padding: 5px;
         }
 
         .card-body {
-            width: 100%;
+            width: calc(100% - 10px);
             height: 60px;
             display: flex;
             flex-direction: row;
-            justify-content: start;
+            justify-content: center;
             align-items: center;
             flex-wrap: nowrap;
             padding: 5px;
         }
 
         .card-footer {
-            width: 100%;
+            width: calc(100% - 10px);
             height: 20px;
             display: flex;
             flex-direction: row;
-            justify-content: start;
+            justify-content: center;
             align-items: center;
             flex-wrap: nowrap;
             padding: 5px;
         }
 
         .thumbnail {
-            width: 90px;
-            height: 90px;
+            width: auto;
+            height: calc(100% - 10px);
         }
 
         #dropbox.highlight {
