--- a/views/new-idea/upload_test.html
+++ b/views/new-idea/upload_test.html
@@ -63,6 +63,7 @@
             align-items: center;
             flex-wrap: nowrap;
             padding: 5px;
+            font-size: 90%;
         }
 
         .thumbnail {
@@ -78,6 +79,10 @@
         .success {
             border: 2px solid green !important;
             border-radius: 6px;
+        }
+
+        progress {
+            border: 2px dotted blue !important;
             height: 8px;
         }
     </style>
