--- a/views/new-idea/upload_test.html
+++ b/views/new-idea/upload_test.html
@@ -81,7 +81,7 @@
         }
 
         progress {
-            border: 2px dotted blue !important;
+            border: 2px solid #36f !important;
             height: 8px;
         }
     </style>
