--- a/views/new-idea/upload_test.html
+++ b/views/new-idea/upload_test.html
@@ -80,6 +80,11 @@
             border-radius: 6px;
         }
 
+        .error {
+            border: 2px solid red !important;
+            border-radius: 6px;
+        }
+
         progress {
             height: 8px;
         }
