--- a/views/new-idea/upload_test.html
+++ b/views/new-idea/upload_test.html
@@ -45,7 +45,7 @@
 
         .card-body {
             width: calc(100% - 10px);
-            height: 64px;
+            height: 54px;
             display: flex;
             flex-direction: row;
             justify-content: center;
@@ -67,7 +67,8 @@
         }
 
         .thumbnail {
-            height: calc(100% - 10px);
+            height: 100%;
+            max-width: 100%;
         }
 
         #dropbox.highlight {
