--- a/views/new-idea/upload_test.html
+++ b/views/new-idea/upload_test.html
@@ -67,7 +67,7 @@
             padding: 5px;
             font-size: 80%;
             border-top: 1px dotted #777;
-            text-wrap: nowrap;
+            white-space: nowrap;
         }
 
         .thumbnail {
