--- a/views/new-idea/upload_test.html
+++ b/views/new-idea/upload_test.html
@@ -158,6 +158,7 @@
                 }
                 card.remove();
             });
+            cardHeader.appendChild(deleteButton);
             card.appendChild(cardHeader);
             cardBody = document.createElement("div");
             cardBody.classList.add("card-body");
