--- a/views/new-idea/upload_test.html
+++ b/views/new-idea/upload_test.html
@@ -123,7 +123,7 @@
             deleteButton.classList.add("btn-outline-danger");
             deleteButton.classList.add("mdi");
             deleteButton.classList.add("mdi-close");
-            deleteButton.style = "position: absolute; top: 0; right: 0;";
+            deleteButton.style = "position: relative; top: 0; right: 0;";
             deleteButton.addEventListener("click", function () {
                 // remove functions
                 if ($attachment_id) {
