--- a/views/new-idea/upload_test.html
+++ b/views/new-idea/upload_test.html
@@ -119,7 +119,8 @@
             cardHeader.appendChild(thumbnail);
             // create a small delete button using mdi icon in the top right corner of header
             var deleteButton = document.createElement("button");
-            deleteButton.classList.add("btn", "btn-sm", "btn-outline-danger", "mdi", "mdi-close");
+            deleteButton.classList.add("btn", "btn-sm", "btn-outline-danger");
+            deleteButton.innerHTML = '<i class="mdi mdi-close"></i>';
             deleteButton.style.position = "absolute";
             deleteButton.style.top = "0";
             deleteButton.style.right = "0";
