--- a/views/new-idea/upload_test.html
+++ b/views/new-idea/upload_test.html
@@ -92,6 +92,14 @@
             height: 8px;
             border-radius: 6px;
         }
+
+        .delete-buton {
+            width: 16px;
+            height: 16px;
+            position: absolute;
+            top: 0;
+            right: 0;
+        }
     </style>
 
 </head>
@@ -119,11 +127,8 @@
             cardHeader.appendChild(thumbnail);
             // create a small delete button using mdi icon in the top right corner of header
             var deleteButton = document.createElement("button");
-            deleteButton.classList.add("btn", "btn-sm", "btn-outline-danger");
+            deleteButton.classList.add("btn", "btn-sm", "btn-outline-danger", "delete-buton");
             deleteButton.innerHTML = '<i class="mdi mdi-close"></i>';
-            deleteButton.style.position = "absolute";
-            deleteButton.style.top = "0";
-            deleteButton.style.right = "0";
             deleteButton.addEventListener("click", function () {
                 // remove functions
                 if ($attachment_id) {
