--- a/views/new-idea/upload_test.html
+++ b/views/new-idea/upload_test.html
@@ -93,7 +93,9 @@
             border-radius: 6px;
         }
 
-        .delete-buton {
+        .delete-button {
+            margin: 0;
+            padding: 0;
             width: 16px;
             height: 16px;
             position: absolute;
@@ -127,7 +129,7 @@
             cardHeader.appendChild(thumbnail);
             // create a small delete button using mdi icon in the top right corner of header
             var deleteButton = document.createElement("button");
-            deleteButton.classList.add("btn", "btn-sm", "btn-outline-danger", "delete-buton");
+            deleteButton.classList.add("btn", "btn-sm", "btn-outline-danger", "delete-button");
             deleteButton.innerHTML = '<i class="mdi mdi-close"></i>';
             deleteButton.addEventListener("click", function () {
                 // remove functions
