--- a/views/new-idea/upload_test.html
+++ b/views/new-idea/upload_test.html
@@ -102,6 +102,23 @@
             top: 0;
             right: 0;
         }
+
+        .delete-button:hover {
+            background-color: #f00;
+        }
+
+        .delete-button:focus {
+            outline: none;
+        }
+
+        .delete-button:active {
+            background-color: #f00;
+        }
+
+        .delete-button i {
+            font-size: 16px;
+            color: #fff;
+        }
     </style>
 
 </head>
