--- a/views/new-idea/upload_test.html
+++ b/views/new-idea/upload_test.html
@@ -101,6 +101,8 @@
             position: absolute;
             top: 0;
             right: 0;
+            border: 1px solid #f00;
+            border-radius: 6px;
         }
 
         .delete-button:hover {
