--- a/views/new-idea/upload_test.html
+++ b/views/new-idea/upload_test.html
@@ -118,7 +118,9 @@
         }
 
         .delete-button i {
-            font-size: 16px;
+            font-size: 14px;
+            width: 16px;
+            height: 16px;
             color: #fff;
         }
     </style>
