--- a/views/new-idea/upload_test.html
+++ b/views/new-idea/upload_test.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>File Upload Test</title>
+    <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
+    <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <style>
         #dropbox {
             width: 300px;
