--- a/views/new-idea/upload_test.html
+++ b/views/new-idea/upload_test.html
@@ -164,8 +164,7 @@
                         if (xhr.status === 200) {
                             var response = JSON.parse(xhr.responseText);
                             if (response.message === "Attachment removed successfully") {
-                                // remove from attachments array
-                                var index = attachments.indexOf($attachment_id);
+                                var index = attachments.indexOf(attachment_id);
                                 if (index > -1) {
                                     attachments.splice(index, 1);
                                 }
